Fix button visibility issue: preserve styles on clone and re-trigger animations
- Update HomeAnimations to re-query buttons by ID instead of direct references
- UnifiedButtonHandler now preserves inline styles (opacity, transform, transition) when cloning
- ButtonRegistry triggers HomeAnimations re-animation after button registration
- Fixes issue where buttons showed visual differences based on registration timing
- Add logo.svg and favicon.svg
- Update button registration with retry logic and re-registration methods

--- a/classic.html
+++ b/classic.html
@@ -38,7 +38,7 @@
     <!-- Loading Screen -->
     <div id="classicLoadingScreen" class="classic-loading-screen">
         <div class="loading-brand">
-            <div class="loading-logo">🐍</div>
+            <div class="loading-logo"><img src="logo.svg" alt="Slitho" style="height: 60px; width: auto; display: block;"></div>
             <h1 class="loading-title">Slitho</h1>
         </div>
         <div class="loading-progress-container">
@@ -67,7 +67,7 @@
     <div id="gameScreen" class="game-screen" style="display: none;">
         <header class="header">
             <h1 class="app-logo">
-                <span class="app-logo-icon">🐍</span>
+                <img src="logo.svg" alt="Slitho" class="app-logo-icon">
                 <span class="app-logo-text">Slitho</span>
             </h1>
             <div class="header-controls">
