--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <!-- Unified favicon / logo: matches in-tab icon and in-game branding -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='14' fill='%230a0a0a'/%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dominant-baseline='central' font-size='38'%3E🐍%3C/text%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="apple-touch-icon" href="logo.svg">
     <link rel="stylesheet" href="style.css">
     
     <!-- Prevent theme flashing on initial load -->
@@ -72,7 +73,7 @@
         <div class="mode-select-content">
             <header class="main-menu-header">
                 <h1 class="app-logo">
-                    <span class="app-logo-icon">🐍</span>
+                    <img src="logo.svg" alt="Slitho" class="app-logo-icon" data-pulse-setup="true">
                     <span class="app-logo-text">Slitho</span>
                 </h1>
             </header>
@@ -175,7 +176,7 @@
     <div id="gameScreen" class="game-screen" style="display: none;">
         <header class="header">
             <h1 class="app-logo">
-                <span class="app-logo-icon">🐍</span>
+                <img src="logo.svg" alt="Slitho" class="app-logo-icon">
                 <span class="app-logo-text">Slitho</span>
             </h1>
             <div class="header-controls">
